add profiled version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,17 @@ if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
     add_definitions(-DNDEBUG)
 endif()
 
-set(NEZ_SRC src/ast.c src/memo.c src/symtable.c src/node.c)
-set(MOZ_SRC src/loader.c src/vm.c src/main.c)
-
+set(NEZ_SRC  src/ast.c src/memo.c src/symtable.c src/node.c)
+set(MOZ_SRC  src/loader.c src/main.c src/vm.c)
+set(MOZ2_SRC src/loader.c src/main.c src/vm_profile.c)
 
 add_library(nez SHARED ${NEZ_SRC})
 
 add_executable(moz ${MOZ_SRC})
 target_link_libraries(moz nez)
+
+add_executable(moz_profile ${MOZ2_SRC})
+target_link_libraries(moz_profile nez)
 
 add_custom_command(OUTPUT vm_core.c vm_inst.h
     COMMAND ruby
