--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ compiler:
 before_install:
 - sudo apt-get install cmake
 before_script:
-- mkdir -p build
+- mkdir -p build install
 - cd build
-- cmake ../
+- cmake ../ -DCMAKE_INSTALL_PREFIX=../install
 - make
 - make install
 script: make test
