--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,13 +61,13 @@ add_dependencies(moz generate_vm_core)
 enable_testing()
 
 add_executable(test_ast    test/test_ast.c)
-add_executable(test_inst   test/test_inst.c)
+add_executable(test_objsize test/test_objsize.c)
 # add_executable(test_loader test/test_loader.c src/loader.c src/vm.c)
 add_executable(test_memo   test/test_memo.c)
 add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
 target_link_libraries(test_ast    nez)
-target_link_libraries(test_inst   nez)
+target_link_libraries(test_objsize nez)
 # target_link_libraries(test_loader nez)
 target_link_libraries(test_memo   nez)
 target_link_libraries(test_node   nez)
