--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,18 +66,18 @@ add_executable(test_objsize test/test_objsize.c)
 add_executable(test_memo   test/test_memo.c)
 add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
-target_link_libraries(test_ast    nez)
+target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
+target_link_libraries(test_memo    nez)
+target_link_libraries(test_node    nez)
+target_link_libraries(test_sym     nez)
 # target_link_libraries(test_loader nez)
-target_link_libraries(test_memo   nez)
-target_link_libraries(test_node   nez)
-target_link_libraries(test_sym    nez)
-add_test(moz_test_ast    test_ast   )
-add_test(moz_test_inst   test_inst  )
+add_test(moz_test_ast     test_ast)
+add_test(moz_test_objsize test_objsize)
+add_test(moz_test_memo    test_memo)
+add_test(moz_test_node    test_node)
+add_test(moz_test_sym     test_sym)
 # add_test(moz_test_loader test_loader)
-add_test(moz_test_memo   test_memo  )
-add_test(moz_test_node   test_node  )
-add_test(moz_test_sym    test_sym   )
 
 install(TARGETS nez LIBRARY DESTINATION lib)
 
