--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,12 +34,14 @@ endif()
 
 set(NEZ_SRC  src/ast.c src/memo.c src/symtable.c src/node.c src/memory.c)
 set(MOZ_SRC  src/loader.c src/main.c src/vm.c)
+set(STAT_SRC  src/stat.c)
 
 add_library(nez SHARED ${NEZ_SRC})
 
 add_executable(moz ${MOZ_SRC})
 target_link_libraries(moz nez)
 
+add_executable(moz_stat ${STAT_SRC})
 add_executable(moz_all ${MOZ_SRC} ${NEZ_SRC})
 
 add_custom_command(OUTPUT vm_core.c vm_inst.h
