--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ include(CheckLibraryExists)
 cmake_minimum_required(VERSION 2.4)
 project(moz)
 
+if(COMMAND cmake_policy)
+    cmake_policy(SET CMP0003 NEW)
+endif(COMMAND cmake_policy)
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
 
 if(NOT CMAKE_BUILD_TYPE)
@@ -29,22 +33,32 @@ SET(CMAKE_C_FLAGS_RELEASE "-O3 -g")
 SET(CMAKE_C_FLAGS_DEBUG   "-O0 -g3")
 string(TOUPPER ${CMAKE_BUILD_TYPE} uppercase_CMAKE_BUILD_TYPE)
 
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+find_package(LLVM REQUIRED CONFIG)
+add_definitions(${LLVM_DEFINITIONS})
+include_directories(${LLVM_INCLUDE_DIRS})
+link_directories(${LLVM_LIBRARY_DIRS})
+
 add_definitions(-D__STDC_LIMIT_MACROS)
 if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
     add_definitions(-DNDEBUG)
 endif()
 
 set(NEZ_SRC  src/ast.c src/memo.c src/symtable.c src/node.c src/memory.c)
-set(MOZ_SRC  src/loader.c src/main.c src/vm.c)
-set(STAT_SRC  src/stat.c)
+set(MOZ_SRC  src/loader.c src/main.c src/vm.c src/jit.cpp)
+#set(STAT_SRC  src/stat.c)
 
 add_library(nez SHARED ${NEZ_SRC})
 
 add_executable(moz ${MOZ_SRC})
 target_link_libraries(moz nez)
 
-add_executable(moz_stat ${STAT_SRC})
+#add_executable(moz_stat ${STAT_SRC})
 add_executable(moz_all ${MOZ_SRC} ${NEZ_SRC})
+
+llvm_map_components_to_libnames(llvm_libs support core jit nativecodegen)
+target_link_libraries(moz ${llvm_libs})
+target_link_libraries(moz_all ${llvm_libs})
 
 add_custom_command(OUTPUT vm_core.c vm_inst.h
     COMMAND ruby
