vmgen.rb support MOZVM_USE_NTERM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ add_custom_command(OUTPUT vm_core.c vm_inst.h
     "${CMAKE_CURRENT_BINARY_DIR}/vm_inst.h"
     DEPENDS
         "${CMAKE_CURRENT_SOURCE_DIR}/src/instruction.def"
+        "${CMAKE_CURRENT_SOURCE_DIR}/tool/vmgen.rb"
 )
 
 add_custom_target(generate_vm_core DEPENDS
