add cmake option ENABLE_JIT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,33 +31,42 @@ string(TOUPPER ${CMAKE_BUILD_TYPE} uppercase_CMAKE_BUILD_TYPE)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-find_package(LLVM REQUIRED CONFIG)
-message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
-message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
-add_definitions(${LLVM_DEFINITIONS})
-include_directories(${LLVM_INCLUDE_DIRS})
-link_directories(${LLVM_LIBRARY_DIRS})
-
 if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
     add_definitions(-DNDEBUG)
 endif()
 
 set(NEZ_SRC  src/ast.c src/memo.c src/symtable.c src/node.c src/memory.c)
-set(MOZ_SRC  src/loader.c src/main.c src/vm.c src/jit.cpp)
+set(MOZ_SRC  src/loader.c src/main.c src/vm.c)
 set(STAT_SRC  src/stat.cpp)
+
+if(ENABLE_JIT)
+    add_definitions(-DMOZVM_ENABLE_JIT=1)
+    SET(MOZ_SRC ${MOZ_SRC} src/jit.cpp)
+    find_package(LLVM REQUIRED CONFIG)
+    message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+    message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+    add_definitions(${LLVM_DEFINITIONS})
+    include_directories(${LLVM_INCLUDE_DIRS})
+    link_directories(${LLVM_LIBRARY_DIRS})
+
+    llvm_map_components_to_libnames(llvm_libs
+        support core nativecodegen mcdisassembler mcjit)
+endif()
 
 add_library(nez SHARED ${NEZ_SRC})
 
 add_executable(moz ${MOZ_SRC})
-target_link_libraries(moz nez)
-
 add_executable(moz_stat ${STAT_SRC})
 add_executable(moz_all ${MOZ_SRC} ${NEZ_SRC})
 
-llvm_map_components_to_libnames(llvm_libs support core nativecodegen mcdisassembler mcjit)
-target_link_libraries(moz ${llvm_libs})
-target_link_libraries(moz_all ${llvm_libs})
-target_link_libraries(moz_stat ${llvm_libs})
+target_link_libraries(moz nez)
+
+if(ENABLE_JIT)
+    target_link_libraries(moz ${llvm_libs})
+    target_link_libraries(moz_all ${llvm_libs})
+    target_link_libraries(moz_stat ${llvm_libs})
+endif()
+
 
 add_custom_command(OUTPUT vm_core.c vm_inst.h
     COMMAND ruby
