refine directory structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,26 +27,35 @@ SET(CFLAGS "${CFLAGS} -Wall -Wcomment -Wformat -Wunused-macros -march=native")
 SET(CMAKE_C_FLAGS         "-Wall -Wno-variadic-macros ${CFLAGS}")
 SET(CMAKE_C_FLAGS_RELEASE "-O3 -g")
 SET(CMAKE_C_FLAGS_DEBUG   "-O0 -g3")
+SET(CMAKE_C_FLAGS_SMALL   "-Os -g0")
 string(TOUPPER ${CMAKE_BUILD_TYPE} uppercase_CMAKE_BUILD_TYPE)
 
 SET(CMAKE_CXX_FLAGS "-Wall ${CMAKE_CXX_FLAGS} -std=c++11")
 
 if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
     add_definitions(-DNDEBUG)
+elseif(${CMAKE_BUILD_TYPE} STREQUAL "Small")
+    add_definitions(-DNDEBUG)
 endif()
 
-set(NEZ_SRC  src/ast.c src/memo.c src/symtable.c src/node.c src/memory.c)
-set(MOZ_SRC  src/loader.c src/main.c src/mozvm.c)
-set(STAT_SRC src/stat.cpp)
-set(DUMP_SRC src/dump.c)
+
+set(NODE_SRC src/node/node.c)
+set(NEZ_SRC  src/libnez/ast.c src/libnez/memo.c src/libnez/symtable.c src/memory.c)
+set(MOZ_SRC  src/loader.c src/mozvm.c src/cli/main.c)
+set(STAT_SRC src/cli/stat.cpp)
+set(DUMP_SRC src/cli/dump.c)
 
 add_library(nez SHARED ${NEZ_SRC})
+add_library(node SHARED ${NODE_SRC})
 
 add_executable(moz ${MOZ_SRC})
 add_executable(moz_stat ${STAT_SRC})
-add_executable(moz_all ${MOZ_SRC} ${NEZ_SRC})
 add_executable(moz_dump ${DUMP_SRC})
+if(${CMAKE_BUILD_TYPE} STREQUAL "Small")
+    add_executable(moz_all ${MOZ_SRC} ${NEZ_SRC} ${NODE_SRC})
+endif()
 
+target_link_libraries(nez node)
 target_link_libraries(moz nez)
 target_link_libraries(moz_dump nez)
 
@@ -104,7 +113,7 @@ add_executable(test_sym    test/test_sym.c)
 target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
 target_link_libraries(test_memo    nez)
-target_link_libraries(test_node    nez)
+target_link_libraries(test_node    node)
 target_link_libraries(test_sym     nez)
 # target_link_libraries(test_loader nez)
 add_test(moz_test_ast     test_ast)
