fix dependency in CMakelists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,8 +78,9 @@ add_dependencies(moz generate_vm_core)
 ## generate nez.jar
 add_custom_command(OUTPUT 
     "${CMAKE_CURRENT_SOURCE_DIR}/nez/nez.jar"
-    COMMAND ant -buildfile nez/build.xml
-    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${COMPILER_SRC}")
+    COMMAND ant -buildfile "${CMAKE_CURRENT_SOURCE_DIR}/nez/build.xml"
+    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${COMPILER_SRC}"
+    "${CMAKE_CURRENT_SOURCE_DIR}/nez/build.xml")
 add_custom_target(generate_nez_jar DEPENDS
     "${CMAKE_CURRENT_BINARY_DIR}/vm_core.c")
 
@@ -91,6 +92,7 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/nez.moz"
     -p
     "${CMAKE_CURRENT_SOURCE_DIR}/nez-grammar/lib/nez.nez"
     DEPENDS
+    "${CMAKE_CURRENT_SOURCE_DIR}/nez/nez.jar"
     "${CMAKE_CURRENT_SOURCE_DIR}/nez-grammar/lib/nez.nez")
 add_custom_target(generate_nez_moz DEPENDS
     "${CMAKE_CURRENT_BINARY_DIR}/nez.moz")
