rename nez-grammar -> nez-language

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = test_vm
 	url = https://github.com/imasahiro/peg_test_case.git
 [submodule "nez-grammar"]
-	path = nez-grammar
+	path = nez-language
 	url = https://github.com/imasahiro/language-nez.git
 [submodule "nez"]
 	path = nez
