--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ set(NEZ_SRC  src/libnez/ast.c src/libnez/memo.c src/libnez/symtable.c src/memory
 set(MOZ_SRC  src/loader.c src/runtime.c src/vm1/mozvm1.c)
 set(STAT_SRC src/cli/stat.cpp)
 set(DUMP_SRC src/cli/dump.c)
-set(COMPILER_SRC src/cli/mozc.c src/compiler/compiler.c src/compiler/expression.c)
+set(COMPILER_SRC src/compiler/compiler.c src/compiler/expression.c)
 
 add_library(nez SHARED ${NEZ_SRC})
 add_library(node SHARED ${NODE_SRC})
@@ -51,7 +51,7 @@ add_library(node SHARED ${NODE_SRC})
 add_executable(moz ${MOZ_SRC} src/cli/main.c)
 add_executable(moz_stat ${STAT_SRC})
 add_executable(moz_dump ${DUMP_SRC})
-add_executable(mozc ${MOZ_SRC} ${COMPILER_SRC})
+add_executable(mozc ${MOZ_SRC} src/cli/mozc.c ${COMPILER_SRC})
 if(${CMAKE_BUILD_TYPE} STREQUAL "Small")
     add_executable(moz_all ${MOZ_SRC} ${NEZ_SRC} ${NODE_SRC} src/cli/main.c)
 endif()
@@ -147,17 +147,20 @@ add_executable(test_objsize test/test_objsize.c)
 add_executable(test_memo   test/test_memo.c)
 add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
+add_executable(test_compiler test/test_compiler.c ${COMPILER_SRC})
 target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
 target_link_libraries(test_memo    nez)
 target_link_libraries(test_node    node)
 target_link_libraries(test_sym     nez)
+target_link_libraries(test_compiler nez)
 # target_link_libraries(test_loader nez)
 add_test(moz_test_ast     test_ast)
 add_test(moz_test_objsize test_objsize)
 add_test(moz_test_memo    test_memo)
 add_test(moz_test_node    test_node)
 add_test(moz_test_sym     test_sym)
+add_test(moz_test_compiler test_compiler)
 # add_test(moz_test_loader test_loader)
 
 install(TARGETS nez LIBRARY DESTINATION lib)
