--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,6 +148,7 @@ add_executable(test_objsize test/test_objsize.c)
 add_executable(test_memo   test/test_memo.c)
 add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
+add_executable(test_bitset test/test_bitset.c)
 add_executable(test_compiler test/test_compiler.c ${COMPILER_SRC})
 target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
@@ -162,6 +163,7 @@ add_test(moz_test_objsize test_objsize)
 add_test(moz_test_memo    test_memo)
 add_test(moz_test_node    test_node)
 add_test(moz_test_sym     test_sym)
+add_test(moz_test_bitset  test_bitset)
 add_test(moz_test_compiler test_compiler)
 # add_test(moz_test_loader test_loader)
 
