--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ set(NEZ_SRC  src/libnez/ast.c src/libnez/memo.c src/libnez/symtable.c src/memory
 set(MOZ_SRC  src/loader.c src/runtime.c src/vm1/mozvm1.c)
 set(STAT_SRC src/cli/stat.cpp)
 set(DUMP_SRC src/cli/dump.c)
-set(COMPILER_SRC src/compiler/compiler.c src/compiler/expression.c)
+set(COMPILER_SRC src/compiler/compiler.c src/compiler/expression.c src/compiler/module.c)
 
 add_library(nez SHARED ${NEZ_SRC})
 add_library(node SHARED ${NODE_SRC})
@@ -149,6 +149,7 @@ add_executable(test_memo   test/test_memo.c)
 add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
 add_executable(test_bitset test/test_bitset.c)
+add_executable(test_buffer test/test_buffer.c)
 add_executable(test_compiler test/test_compiler.c ${COMPILER_SRC})
 target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
@@ -164,6 +165,7 @@ add_test(moz_test_memo    test_memo)
 add_test(moz_test_node    test_node)
 add_test(moz_test_sym     test_sym)
 add_test(moz_test_bitset  test_bitset)
+add_test(moz_test_buffer  test_buffer)
 add_test(moz_test_compiler test_compiler)
 # add_test(moz_test_loader test_loader)
 
