--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,7 @@ add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
 add_executable(test_bitset test/test_bitset.c)
 add_executable(test_buffer test/test_buffer.c)
-add_executable(test_compiler test/test_compiler.c ${COMPILER_SRC})
+add_executable(test_compiler test/test_compiler.c ${COMPILER_SRC} ${VM2_SRC})
 target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
 target_link_libraries(test_memo    nez)
