Add integration tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,20 +163,20 @@ enable_testing()
 add_executable(test_array  test/test_array.c)
 add_executable(test_ast    test/test_ast.c)
 add_executable(test_objsize test/test_objsize.c)
-# add_executable(test_loader test/test_loader.c src/loader.c src/mozvm.c)
 add_executable(test_memo   test/test_memo.c)
 add_executable(test_node   test/test_node.c)
 add_executable(test_sym    test/test_sym.c)
 add_executable(test_bitset test/test_bitset.c)
 add_executable(test_buffer test/test_buffer.c)
 add_executable(test_compiler test/test_compiler.c ${COMPILER_SRC} ${VM2_SRC})
+
 target_link_libraries(test_ast     nez)
 target_link_libraries(test_objsize nez)
 target_link_libraries(test_memo    nez)
 target_link_libraries(test_node    node)
 target_link_libraries(test_sym     nez)
 target_link_libraries(test_compiler nez)
-# target_link_libraries(test_loader nez)
+
 add_test(moz_test_array   test_array)
 add_test(moz_test_ast     test_ast)
 add_test(moz_test_objsize test_objsize)
@@ -186,7 +186,15 @@ add_test(moz_test_sym     test_sym)
 add_test(moz_test_bitset  test_bitset)
 add_test(moz_test_buffer  test_buffer)
 add_test(moz_test_compiler test_compiler)
-# add_test(moz_test_loader test_loader)
+
+file(GLOB_RECURSE test_files ${CMAKE_CURRENT_SOURCE_DIR}/test/it/*.nez)
+foreach(peg ${test_files})
+    string(REPLACE // / peg ${peg})
+    string(REPLACE .peg .txt input ${peg})
+    string(REPLACE ${CMAKE_CURRENT_SOURCE_DIR}/test/it/ "" test_name ${peg})
+    add_test(${test_name} mozvm -p ${peg} -i ${input})
+    set_tests_properties(${test_name} PROPERTIES TIMEOUT 5)
+endforeach(peg test_files)
 
 install(TARGETS nez LIBRARY DESTINATION lib)
 
