--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,7 +190,7 @@ add_test(moz_test_compiler test_compiler)
 file(GLOB_RECURSE test_files ${CMAKE_CURRENT_SOURCE_DIR}/test/it/*.nez)
 foreach(peg ${test_files})
     string(REPLACE // / peg ${peg})
-    string(REPLACE .peg .txt input ${peg})
+    string(REPLACE ".nez" ".txt" input ${peg})
     string(REPLACE ${CMAKE_CURRENT_SOURCE_DIR}/test/it/ "" test_name ${peg})
     add_test(${test_name} mozvm -p ${peg} -i ${input})
     set_tests_properties(${test_name} PROPERTIES TIMEOUT 5)
